syntax = "proto3";
package net_protobuf;

message IPv4_Endpoint {
  fixed32 address = 1;
  int32 port = 2;
}

message Udp_InfoMessage {
  int32 id = 1;
  IPv4_Endpoint local_endpoint = 2;
}

message Udp_PeerAddressMessage {
  int32 id = 1;
  IPv4_Endpoint local_endpoint = 2;
  IPv4_Endpoint public_endpoint = 3;
}

message Udp_KeepaliveMessage {}